--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Calculatip</string>
     <string name="action_settings">Settings</string>
+    <string name="name_entry_hint">Participant Name</string>
+    <string name="percent_other_entry_hint">Enter Other Percent Here</string>
+    <string name="label_15_percent">15%</string>
+    <string name="label_18_percent">18%</string>
+    <string name="label_20_percent">20%</string>
+    <string name="label_other_percent">Other</string>
 </resources>
